--- a/Producto/templates/base.html
+++ b/Producto/templates/base.html
@@ -22,7 +22,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/producto/">Productos</a>
+                    <a class="nav-link" href="/Producto/">Productos</a>
                 </li>                
             </ul>
 
