Primera version estable

--- a/Producto/templates/base.html
+++ b/Producto/templates/base.html
@@ -46,7 +46,7 @@
                 <div style="float: left; width: 400px;" >ISIS-Consulting</div>
                 <div style="float: right; width: 220px;" >Universidad de los Andes</div>
                 <br>
-                <div style="float: left; width: 400px;" ><i>Desarrollo de requerimientos ASRs (tomado del codigo de Ivan)</i></div>
+                <div style="float: left; width: 400px;" ><i>Desarrollo de requerimientos ASRs</i></div>
             </div>
             <br>
 
