--- a/apps/Venta/templates/Venta/listarVentas.html
+++ b/apps/Venta/templates/Venta/listarVentas.html
@@ -4,7 +4,7 @@
 <div class="content">
     <div class="">
         <div class="page-header-title">
-            <h4 class="page-title">Inventario del unto de venta</h4>
+            <h4 class="page-title">Puntos de Venta</h4>
             <!--- 
             <div style="text-align:right;">
                 <button type="button" class="btn btn-success waves-effect waves-light"
@@ -26,17 +26,17 @@
                     <table class="table table-hover">
                         <thead>
                         <tr style="color:#0E2EB0">
-                            <th>Punto de Venta</th>
                             <th>Especificacion Producto</th>
+                            <th>Factura</th>
                             <th>Cantidad</th>
                         </tr>
                         </thead>
                         <tbody>
                                                        
-                        {% for actual in inventario %}
+                        {% for actual in ventas %}
                         <tr>
-                            <td>{{ actual.puntoDeVenta.nombre}}</td>
-                            <td>{{ actual.especificacionProducto.producto.nombre}}</td>
+                            <td>{{ actual.especificacionProducto}}</td>
+                            <td>{{ actual.factura}}</td>
                             <td>{{ actual.cantidad}}</td>
                         </tr>
                         {% endfor %}
